; ModuleID = '/home/carl/AnghaBench/micropython/ports/nrf/drivers/secureboot/extr_secureboot_main.c_peripheral_setup.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/nrf/drivers/secureboot/extr_secureboot_main.c_peripheral_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@SPU_PERIPHID_PERM_PRESENT_IsPresent = common dso_local global i32 0, align 4
@SPU_PERIPHID_PERM_PRESENT_Pos = common dso_local global i32 0, align 4
@SPU_PERIPHID_PERM_SECATTR_NonSecure = common dso_local global i32 0, align 4
@SPU_PERIPHID_PERM_SECATTR_Pos = common dso_local global i32 0, align 4
@SPU_PERIPHID_PERM_LOCK_Locked = common dso_local global i32 0, align 4
@SPU_PERIPHID_PERM_LOCK_Pos = common dso_local global i32 0, align 4
@NRF_SPU_S = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @peripheral_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @peripheral_setup(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i32 @NVIC_DisableIRQ(i64 %4)
  store i32 0, i32* %3, align 4
  %6 = load i32, i32* @SPU_PERIPHID_PERM_PRESENT_IsPresent, align 4
  %7 = load i32, i32* @SPU_PERIPHID_PERM_PRESENT_Pos, align 4
  %8 = shl i32 %6, %7
  %9 = load i32, i32* %3, align 4
  %10 = or i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @SPU_PERIPHID_PERM_SECATTR_NonSecure, align 4
  %12 = load i32, i32* @SPU_PERIPHID_PERM_SECATTR_Pos, align 4
  %13 = shl i32 %11, %12
  %14 = load i32, i32* %3, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* @SPU_PERIPHID_PERM_LOCK_Locked, align 4
  %17 = load i32, i32* @SPU_PERIPHID_PERM_LOCK_Pos, align 4
  %18 = shl i32 %16, %17
  %19 = load i32, i32* %3, align 4
  %20 = or i32 %19, %18
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* %3, align 4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** @NRF_SPU_S, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %23, align 8
  %25 = load i64, i64* %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i64 %25
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  store i32 %21, i32* %27, align 4
  %28 = load i64, i64* %2, align 8
  %29 = call i32 @NVIC_SetTargetState(i64 %28)
  ret void
}

declare dso_local i32 @NVIC_DisableIRQ(i64) #1

declare dso_local i32 @NVIC_SetTargetState(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
